--- a/data/lang/zh_cn.json
+++ b/data/lang/zh_cn.json
@@ -551,6 +551,71 @@
     "biome.minecraft.windswept_hills": "风袭丘陵",
     "biome.minecraft.windswept_savanna": "风袭热带草原",
     "biome.minecraft.wooded_badlands": "疏林恶地",
+    "biome.minecraft.is_badlands": "恶地",
+    "biome.minecraft.is_bamboo_jungle": "竹林",
+    "biome.minecraft.is_basalt_deltas": "玄武岩三角洲",
+    "biome.minecraft.is_beach": "沙滩",
+    "biome.minecraft.is_birch_forest": "桦木森林",
+    "biome.minecraft.is_cherry_grove": "樱花树林",
+    "biome.minecraft.is_cold_ocean": "冷水海洋",
+    "biome.minecraft.is_crimson_forest": "绯红森林",
+    "biome.minecraft.is_dark_forest": "黑森林",
+    "biome.minecraft.is_deep_cold_ocean": "冷水深海",
+    "biome.minecraft.is_deep_dark": "深暗之域",
+    "biome.minecraft.is_deep_frozen_ocean": "冰冻深海",
+    "biome.minecraft.is_deep_lukewarm_ocean": "温水深海",
+    "biome.minecraft.is_deep_ocean": "深海",
+    "biome.minecraft.is_desert": "沙漠",
+    "biome.minecraft.is_dripstone_caves": "溶洞",
+    "biome.minecraft.is_end_barrens": "末地荒地",
+    "biome.minecraft.is_end_highlands": "末地高地",
+    "biome.minecraft.is_end_midlands": "末地内陆",
+    "biome.minecraft.is_eroded_badlands": "风蚀恶地",
+    "biome.minecraft.is_flower_forest": "繁花森林",
+    "biome.minecraft.is_forest": "森林",
+    "biome.minecraft.is_frozen_ocean": "冻洋",
+    "biome.minecraft.is_frozen_peaks": "冰封山峰",
+    "biome.minecraft.is_frozen_river": "冻河",
+    "biome.minecraft.is_grove": "雪林",
+    "biome.minecraft.is_ice_spikes": "冰刺之地",
+    "biome.minecraft.is_jagged_peaks": "尖峭山峰",
+    "biome.minecraft.is_jungle": "丛林",
+    "biome.minecraft.is_lukewarm_ocean": "温水海洋",
+    "biome.minecraft.is_lush_caves": "繁茂洞穴",
+    "biome.minecraft.is_mangrove_swamp": "红树林沼泽",
+    "biome.minecraft.is_meadow": "草甸",
+    "biome.minecraft.is_mushroom_fields": "蘑菇岛",
+    "biome.minecraft.is_nether_wastes": "下界荒地",
+    "biome.minecraft.is_ocean": "海洋",
+    "biome.minecraft.is_old_growth_birch_forest": "原始桦木森林",
+    "biome.minecraft.is_old_growth_pine_taiga": "原始松木针叶林",
+    "biome.minecraft.is_old_growth_spruce_taiga": "原始云杉针叶林",
+    "biome.minecraft.is_pale_garden": "苍白之园",
+    "biome.minecraft.is_plains": "平原",
+    "biome.minecraft.is_river": "河流",
+    "biome.minecraft.is_savanna": "热带草原",
+    "biome.minecraft.is_savanna_plateau": "热带高原",
+    "biome.minecraft.is_small_end_islands": "末地小型岛屿",
+    "biome.minecraft.is_snowy_beach": "积雪沙滩",
+    "biome.minecraft.is_snowy_plains": "雪原",
+    "biome.minecraft.is_snowy_slopes": "积雪山坡",
+    "biome.minecraft.is_snowy_taiga": "积雪针叶林",
+    "biome.minecraft.is_soul_sand_valley": "灵魂沙峡谷",
+    "biome.minecraft.is_sparse_jungle": "稀疏丛林",
+    "biome.minecraft.is_stony_peaks": "裸岩山峰",
+    "biome.minecraft.is_stony_shore": "石岸",
+    "biome.minecraft.is_sunflower_plains": "向日葵平原",
+    "biome.minecraft.is_swamp": "沼泽",
+    "biome.minecraft.is_taiga": "针叶林",
+    "biome.minecraft.is_the_end": "末地",
+    "biome.minecraft.is_the_void": "虚空",
+    "biome.minecraft.is_warm_ocean": "暖水海洋",
+    "biome.minecraft.is_warped_forest": "诡异森林",
+    "biome.minecraft.is_windswept_forest": "风袭森林",
+    "biome.minecraft.is_windswept_gravelly_hills": "风袭沙砾丘陵",
+    "biome.minecraft.is_windswept_hills": "风袭丘陵",
+    "biome.minecraft.is_windswept_savanna": "风袭热带草原",
+    "biome.minecraft.is_wooded_badlands": "疏林恶地",
     "block.minecraft.acacia_button": "金合欢木按钮",
     "block.minecraft.acacia_door": "金合欢木门",
     "block.minecraft.acacia_fence": "金合欢木栅栏",
