--- a/data/lang/zh_cn.json
+++ b/data/lang/zh_cn.json
@@ -573,6 +573,7 @@
     "biome.minecraft.is_eroded_badlands": "风蚀恶地",
     "biome.minecraft.is_flower_forest": "繁花森林",
     "biome.minecraft.is_forest": "森林",
+    "biome.minecraft.is_end": "末地",
     "biome.minecraft.is_frozen_ocean": "冻洋",
     "biome.minecraft.is_frozen_peaks": "冰封山峰",
     "biome.minecraft.is_frozen_river": "冻河",
