--- a/data/lang/zh_cn.json
+++ b/data/lang/zh_cn.json
@@ -13618,7 +13618,8 @@
     "cobblemon.bucket.common": "普通",
     "cobblemon.bucket.uncommon": "罕见",
     "cobblemon.bucket.rare": "稀有",
-    "cobblemon.bucket.ultra_rare": "超级稀有",
+    "cobblemon.bucket.ultra-rare": "超稀有",
+    "cobblemon.bucket.ultra_rare": "超稀有",
     "cobblemon.preset.ancient_city": "远古城市",
     "cobblemon.preset.derelict": "废弃建筑",
     "cobblemon.preset.desert_pyramid": "沙漠金字塔",
